<resources>
    <string name="app_name">Arrival</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sort_by">Sort By</string>
    <string name="action_settings">Settings</string>
    <string name="student_details_activity">Student Details</string>
    <!-- SharedPrefernce-->
    <!-- for now caching only studnet db ID-->
    <string name="sort_by_dialog_title">I want my roommate...</string>
    <string name="login_cache">LoginCache</string>
    <string name="login_token">LoginToken</string>
    <!-- Strings related to login -->
    <!-- Strings for list filter settings-->
    <string name="roommate_list_preference">RoommateListPreference</string>
    <string name="gender_preference">GenderPreference</string>
    <string name="language_preference">LanguagePreference</string>
    <string name="country_preference">CountryPreference</string>
    <string name="diet_preference">DietPreference</string>
    <string name="sleep_preference">SleepPreference</string>
    <string name="wakeup_preference">WakeupPreference</string>
    <!-- end-->
    <string name="prompt_email">Email (Required)</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_home_page">HomePage</string>


    <string name="college_title">Choose your college</string>
    <string name="title_activity_airport">Airport</string>
    <string name="title_activity_profile_settings">Profile Settings</string>
    <string-array name="language_list">
        <item>English</item>
        <item>Chinese</item>
        <item>Hindi</item>
        <item>French</item>
        <item>Urdu</item>
    </string-array>
    <string name="language_title">Enter your language preference</string>

    <string-array name="nationality_list">
        <item>American</item>
        <item>Chinese</item>
        <item>Indian</item>
        <item>French</item>
        <item>Middle-East</item>
    </string-array>

    <string name="nationality_title">Choose your nationality</string>

    <string-array name="diet_list">
        <item>None</item>
        <item>Vegeterian</item>
        <item>Non-Vegeterian</item>
        <item>Lactophobic</item>
    </string-array>

    <string name="diet_title">Choose your diet</string>

    <string-array name="major_list">
        <item>Computer Science</item>
        <item>Electrical Engineering</item>
        <item>Computer Engineering</item>
        <item>Computer Networks</item>
        <item></item>
    </string-array>

    <string name="major_title">Enter your major subject</string>

    <string-array name="fun_list">
        <item>Kayaking</item>
        <item>Hiking</item>
        <item>Online Gaming</item>
        <item>Defy Gravity</item>
        <item>Fishing</item>
        <item>Jet Skiing</item>
        <item>Scuba Diving</item>
        <item>Other</item>
    </string-array>

    <string name="fun_title">Something you want to try for fun</string>

    <string-array name="concern_list">
        <item>Grades</item>
        <item>Studying</item>
        <item>Silence</item>
        <item>Parties</item>
        <item>Competitions</item>
        <item>Hackathons</item>
        <item>Other</item>
        <item>Nothing</item>
    </string-array>

    <string name="concern_title">Most concerned about</string>
    <string name="title_activity_new_acct_scrolling">Create New Account</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_main_home">MainHomeActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>